add_library(videovulkan
  BoundingBox.cpp
  BoundingBox.h
  CommandBufferManager.cpp
  CommandBufferManager.h
  Constants.h
  main.cpp
  ObjectCache.cpp
  ObjectCache.h
  PerfQuery.cpp
  PerfQuery.h
  Renderer.cpp
  Renderer.h
  ShaderCompiler.cpp
  ShaderCompiler.h
  StateTracker.cpp
  StateTracker.h
  StagingBuffer.cpp
  StagingBuffer.h
  StreamBuffer.cpp
  StreamBuffer.h
  SwapChain.cpp
  SwapChain.h
  VertexFormat.cpp
  VertexFormat.h
  VertexManager.cpp
  VertexManager.h
  VKPipeline.cpp
  VKPipeline.h
  VKShader.cpp
  VKShader.h
  VKTexture.cpp
  VKTexture.h
  VulkanContext.cpp
  VulkanContext.h
  VulkanLoader.cpp
  VulkanLoader.h
)

target_link_libraries(videovulkan
PUBLIC
  common
  videocommon

PRIVATE
  glslang
  OSDependent
  OGLCompiler
  glslang
  HLSL
  SPIRV
  SPIRV-Tools-opt
  SPIRV-Tools
  xxhash
)

target_include_directories(videovulkan
SYSTEM PRIVATE
  /usr/include/glslang/Public
  /usr/include/glslang/SPIRV
)
